cmake_minimum_required (VERSION 2.6)
project (VTK_Sandbox)

include_directories ("$ENV{CATCH_DIR}/include")
include_directories ("$ENV{NUT_DIR}/include")
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

add_executable(First_test 0_first_test.cpp)
add_executable(Display_multiple_objs 1_display_multple_geom_obj.cpp)
add_executable(Background_gradient 2_background_gradient.cpp)
add_executable(Shading 3_shading.cpp)
add_executable(Quadric 4_quadric.cpp)
add_executable(Obj 5_display_obj.cpp)
add_executable(Custom_interaction 6_custom_interaction.cpp)

 
if(VTK_LIBRARIES)
  target_link_libraries(First_test ${VTK_LIBRARIES})
  target_link_libraries(Display_multiple_objs ${VTK_LIBRARIES})
  target_link_libraries(Background_gradient ${VTK_LIBRARIES})
  target_link_libraries(Shading ${VTK_LIBRARIES})
  target_link_libraries(Quadric ${VTK_LIBRARIES})
  target_link_libraries(Obj ${VTK_LIBRARIES})
  target_link_libraries(Custom_interaction ${VTK_LIBRARIES})
else()
  target_link_libraries(First_test vtkHybrid vtkWidgets)
  target_link_libraries(Display_multiple_objs vtkHybrid vtkWidgets)
  target_link_libraries(Background_gradient vtkHybrid vtkWidgets)
  target_link_libraries(Shading vtkHybrid vtkWidgets)
  target_link_libraries(Quadric vtkHybrid vtkWidgets)
  target_link_libraries(Obj vtkHybrid vtkWidgets)
  target_link_libraries(Custom_interaction vtkHybrid vtkWidgets)
endif()
